--- a/ai-solutions.html
+++ b/ai-solutions.html
@@ -9,14 +9,14 @@
   <meta name="description" content="Professional AI and Machine Learning solutions in Pakistan. Code Cortex builds intelligent systems, predictive analytics, chatbots, and automation solutions for businesses.">
   <meta name="keywords" content="AI solutions Pakistan, machine learning development, artificial intelligence, predictive analytics, AI chatbots, automation solutions, data science Pakistan">
   <meta name="author" content="Code Cortex (SMC-Pvt.) Ltd.">
-  <link rel="canonical" href="https://codecortexpk-tech.github.io/codecortexpk/ai-solutions.html">
+  <link rel="canonical" href="https://codecortexdigital.github.io/codecortexdigital/ai-solutions.html">
   
   <!-- Open Graph -->
   <meta property="og:title" content="AI & Machine Learning Solutions Pakistan | Code Cortex">
   <meta property="og:description" content="Professional AI development including machine learning, predictive analytics, intelligent chatbots, and business automation solutions.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://codecortexpk-tech.github.io/codecortexpk/ai-solutions.html">
-  <meta property="og:image" content="https://codecortexpk-tech.github.io/codecortexpk/code_logo.png">
+  <meta property="og:url" content="https://codecortexdigital.github.io/codecortexdigital/ai-solutions.html">
+  <meta property="og:image" content="https://codecortexdigital.github.io/codecortexdigital/code_logo.png">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -44,7 +44,7 @@
     "provider": {
       "@type": "Organization",
       "name": "Code Cortex (SMC-Pvt.) Ltd.",
-      "url": "https://codecortexpk-tech.github.io/codecortexpk/"
+      "url": "https://codecortexdigital.github.io/codecortexdigital/"
     },
     "description": "Professional AI and Machine Learning services including predictive analytics, intelligent chatbots, automation solutions, and custom ML model development.",
     "serviceType": "Artificial Intelligence",
@@ -784,7 +784,7 @@
             <a href="https://www.facebook.com/codecortex" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com/codecortex" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/company/codecortex" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/codecortexpk-tech" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/codecortexdigital" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
           </div>
         </div>
         <div class="footer-column">
@@ -823,7 +823,7 @@
           <div class="contact-method">
             <i class="fas fa-envelope"></i>
             <div>
-              <p>codecortexpk@gmail.com</p>
+              <p>codecortexdigital.com</p>
             </div>
           </div>
           <div class="contact-method">
@@ -886,4 +886,5 @@
   </script>
 </body>
 </html>
+
 
