--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Get in touch with Code Cortex - Leading software house in Pakistan. Contact us for web development, mobile apps, AI solutions, and IT services.">
   <meta name="keywords" content="contact software house Pakistan, web development contact, mobile app development Pakistan, AI solutions contact">
   <meta name="author" content="Code Cortex (SMC-Pvt.) Ltd.">
-  <link rel="canonical" href="https://codecortexdigital-tech.github.io/codecortexdigital/contact.html">
+  <link rel="canonical" href="https://codecortexdigital.github.io/codecortexdigital/contact.html">
   <meta name="theme-color" content="#2b2e3d">
   <meta name="robots" content="index, follow">
 
@@ -17,8 +17,8 @@
   <meta property="og:title" content="Contact Code Cortex | Software House in Pakistan">
   <meta property="og:description" content="Get in touch with Code Cortex for professional web & mobile app development, AI solutions, and IT services.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://codecortexdigital-tech.github.io/codecortexdigital/contact.html">
-  <meta property="og:image" content="https://codecortexdigital-tech.github.io/codecortexdigital/code_logo.png">
+  <meta property="og:url" content="https://codecortexdigital.github.io/codecortexdigital/contact.html">
+  <meta property="og:image" content="https://codecortexdigital.github.io/codecortexdigital/code_logo.png">
   <meta property="og:site_name" content="Code Cortex">
 
   <!-- Preload Critical Resources -->
