--- a/maintenance.html
+++ b/maintenance.html
@@ -9,14 +9,14 @@
   <meta name="description" content="Professional IT maintenance and support services in Pakistan. Code Cortex provides 24/7 bug fixing, server monitoring, updates, and technical support for websites and applications.">
   <meta name="keywords" content="IT maintenance Pakistan, technical support, bug fixing, server monitoring, software updates, 24/7 support, IT services Pakistan">
   <meta name="author" content="Code Cortex (SMC-Pvt.) Ltd.">
-  <link rel="canonical" href="https://codecortexpk-tech.github.io/codecortexpk/maintenance.html">
+  <link rel="canonical" href="https://codecortexdigital.github.io/codecortexdigital/maintenance.html">
   
   <!-- Open Graph -->
   <meta property="og:title" content="IT Maintenance & Support Services Pakistan | Code Cortex">
   <meta property="og:description" content="Professional IT maintenance, 24/7 technical support, bug fixing, server monitoring, and software updates for businesses in Pakistan.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://codecortexpk-tech.github.io/codecortexpk/maintenance.html">
-  <meta property="og:image" content="https://codecortexpk-tech.github.io/codecortexpk/code_logo.png">
+  <meta property="og:url" content="https://codecortexdigital.github.io/codecortexdigital/maintenance.html">
+  <meta property="og:image" content="https://codecortexdigital.github.io/codecortexdigital/code_logo.png">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -44,7 +44,7 @@
     "provider": {
       "@type": "Organization",
       "name": "Code Cortex (SMC-Pvt.) Ltd.",
-      "url": "https://codecortexpk-tech.github.io/codecortexpk/"
+      "url": "https://codecortexdigital.github.io/codecortexdigital/"
     },
     "description": "Professional IT maintenance and technical support services including bug fixing, server monitoring, software updates, and 24/7 support for digital solutions.",
     "serviceType": "IT Maintenance & Support",
@@ -793,7 +793,7 @@
             <a href="https://www.facebook.com/codecortex" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com/codecortex" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/company/codecortex" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/codecortexpk-tech" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/codecortexdigital" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
           </div>
         </div>
         <div class="footer-column">
@@ -832,7 +832,7 @@
           <div class="contact-method">
             <i class="fas fa-envelope"></i>
             <div>
-              <p>codecortexpk@gmail.com</p>
+              <p>codecortexdigital.com</p>
             </div>
           </div>
           <div class="contact-method">
@@ -895,4 +895,5 @@
   </script>
 </body>
 </html>
+
 
