--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Code Cortex - Leading software house in Attock, Pakistan. We provide custom web development, mobile apps, AI solutions, and IT services for businesses worldwide.">
   <meta name="keywords" content="software house Pakistan, web development, mobile app development, AI solutions, IT services Pakistan, custom software, responsive websites, React development, Android iOS apps">
   <meta name="author" content="Code Cortex (SMC-Pvt.) Ltd.">
-  <link rel="canonical" href="https://codecortexdigital.github.io/codecortexdigital/">
+  <link rel="canonical" href="https://codecortexdigital.github.io/com/">
   <meta name="theme-color" content="#2b2e3d">
   <meta name="robots" content="index, follow">
 
@@ -17,15 +17,15 @@
   <meta property="og:title" content="Code Cortex | Software House in Pakistan | IT & AI Solutions">
   <meta property="og:description" content="Professional web & mobile app development, AI solutions, and IT services. Transforming ideas into scalable digital solutions.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://codecortexdigital.github.io/codecortexdigital/">
-  <meta property="og:image" content="https://codecortexdigital.github.io/codecortexdigital/code_logo.png">
+  <meta property="og:url" content="https://codecortexdigital.github.io/com/">
+  <meta property="og:image" content="https://codecortexdigital.github.io/com/code_logo.png">
   <meta property="og:site_name" content="Code Cortex">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Code Cortex | Software House in Pakistan">
   <meta name="twitter:description" content="Web & Mobile App Development, AI solutions, and IT services by Code Cortex in Pakistan.">
-  <meta name="twitter:image" content="https://codecortexdigital.github.io/codecortexdigital/code_logo.png">
+  <meta name="twitter:image" content="https://codecortexdigital.github.io/com/code_logo.png">
 
   <!-- Preload Critical Resources -->
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -43,8 +43,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Code Cortex (SMC-Pvt.) Ltd.",
-    "url": "https://codecortexdigital.github.io/codecortexdigital/",
-    "logo": "https://codecortexdigital.github.io/codecortexdigital/code_logo.png",
+    "url": "https://codecortexdigital.github.io/com/",
+    "logo": "https://codecortexdigital.github.io/com/code_logo.png",
     "description": "Leading software house in Pakistan providing web development, mobile apps, AI solutions, and IT services.",
     "address": {
       "@type": "PostalAddress",
@@ -1351,3 +1351,4 @@
   </script>
 </body>
 </html>
+
