--- a/mobile-apps.html
+++ b/mobile-apps.html
@@ -921,7 +921,7 @@
           <div class="contact-method">
             <i class="fas fa-envelope"></i>
             <div>
-              <p>codecortexdigital.com</p>
+              <p>info@codecortexdigital.com</p>
             </div>
           </div>
           <div class="contact-method">
