--- a/careers.html
+++ b/careers.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Careers | Code Cortex Digital Solutions</title>
-  <meta name="description" content="Join Code Cortex Digital Solutions. Explore careers in web development, mobile apps, AI, and software engineering." />
-  <meta name="keywords" content="Careers Code Cortex, software jobs Pakistan, web developer jobs, IT careers" />
-  <meta name="author" content="Code Cortex Digital Solutions" />
-  <meta name="robots" content="index, follow" />
+  <title>Careers at Code Cortex | Join Our Team</title>
+  <meta name="description" content="Join Code Cortex and build the future of technology. Explore careers in web, mobile, AI, and software development." />
+  <meta name="keywords" content="Code Cortex careers, software jobs Pakistan, developer jobs, IT careers" />
+  <meta name="author" content="Code Cortex (Pvt.) Ltd." />
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/theme.css" />
@@ -24,18 +23,18 @@
   <!-- Skip link -->
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
-  <!-- Header -->
+  <!-- HEADER -->
   <div id="site-header"></div>
 
-  <!-- MAIN -->
+  <!-- MAIN CONTENT -->
   <main id="main-content">
 
     <!-- HERO -->
-    <section class="hero small-hero">
+    <section class="hero">
       <h2>Careers at Code Cortex</h2>
       <p>
-        Build your future with a team shaping modern digital solutions
-        for global clients.
+        Build impactful digital products with a passionate team shaping the
+        future of technology.
       </p>
     </section>
 
@@ -44,120 +43,93 @@
       <h2>Why Work With Us?</h2>
 
       <div class="cards-container">
+        <div class="card">
+          <i class="fas fa-users"></i>
+          <h3>Collaborative Culture</h3>
+          <p>
+            Work with talented professionals in a supportive, growth-focused
+            environment.
+          </p>
+        </div>
 
         <div class="card">
-          <i class="fas fa-globe"></i>
-          <h3>Global Exposure</h3>
+          <i class="fas fa-rocket"></i>
+          <h3>Career Growth</h3>
           <p>
-            Work on international projects for clients in USA, UAE, and beyond.
+            Learn new technologies, improve your skills, and grow your career
+            with real-world projects.
           </p>
         </div>
 
         <div class="card">
           <i class="fas fa-laptop-code"></i>
-          <h3>Modern Technologies</h3>
+          <h3>Modern Tech Stack</h3>
           <p>
-            Hands-on experience with latest frameworks, tools, and best practices.
+            Hands-on experience with modern web, mobile, cloud, and AI
+            technologies.
           </p>
         </div>
-
-        <div class="card">
-          <i class="fas fa-users"></i>
-          <h3>Supportive Culture</h3>
-          <p>
-            Learn, grow, and collaborate in a friendly and professional environment.
-          </p>
-        </div>
-
       </div>
     </section>
 
     <!-- OPEN POSITIONS -->
-    <section>
+    <section class="metrics">
       <h2>Open Positions</h2>
 
       <div class="cards-container">
-
         <div class="card">
-          <i class="fas fa-code"></i>
           <h3>Frontend Developer</h3>
           <p>
-            HTML, CSS, JavaScript, React or similar frameworks.
+            HTML, CSS, JavaScript, React. Experience building responsive user
+            interfaces.
           </p>
         </div>
 
         <div class="card">
-          <i class="fas fa-server"></i>
           <h3>Backend Developer</h3>
           <p>
-            Node.js, PHP, Django, APIs, and database management.
+            Node.js / Python, APIs, databases, and scalable backend systems.
           </p>
         </div>
 
         <div class="card">
-          <i class="fas fa-brain"></i>
+          <h3>Mobile App Developer</h3>
+          <p>
+            Android / iOS or Flutter developers with real app deployment
+            experience.
+          </p>
+        </div>
+
+        <div class="card">
           <h3>AI / ML Engineer</h3>
           <p>
-            Machine learning models, data analytics, and AI systems.
+            Machine learning, data analysis, automation, and intelligent
+            systems.
           </p>
         </div>
-
       </div>
     </section>
 
-    <!-- HOW TO APPLY -->
-    <section>
-      <h2>How to Apply</h2>
-
-      <div class="cards-container">
-
-        <div class="card">
-          <i class="fas fa-envelope"></i>
-          <h3>Send Your Resume</h3>
-          <p>
-            Email your CV and portfolio to  
-            <strong>info@codecortexdigital.com</strong>
-          </p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-comments"></i>
-          <h3>Interview</h3>
-          <p>
-            Short discussion to understand your skills and career goals.
-          </p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-handshake"></i>
-          <h3>Join Our Team</h3>
-          <p>
-            Start working on exciting real-world projects.
-          </p>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- CAREERS CTA (IMPORTANT) -->
+    <!-- CAREERS CTA (FIXED EMAIL) -->
     <section class="final-cta">
       <h2>Ready to Grow Your Career?</h2>
       <p>Be part of a team shaping the future of technology.</p>
 
-      <a href="mailto:info@codecortexdigital.com?subject=Job Application - Code Cortex"
-         class="btn-large">
+      <a
+        href="mailto:info@codecortexdigital.com?subject=Job Application - Code Cortex"
+        class="btn-large"
+      >
         Apply Now
       </a>
     </section>
 
   </main>
 
-  <!-- Footer -->
+  <!-- FOOTER -->
   <div id="site-footer"></div>
 
-  <!-- Scripts -->
+  <!-- SCRIPTS -->
   <script src="js/include.js"></script>
-  <script src="js/main.js"></script>
 
 </body>
 </html>
