--- a/careers.html
+++ b/careers.html
@@ -5,17 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Careers at Code Cortex | Join Our Team</title>
-  <meta name="description" content="Join Code Cortex and build the future of technology. Explore careers in web, mobile, AI, and software development." />
-  <meta name="keywords" content="Code Cortex careers, software jobs Pakistan, developer jobs, IT careers" />
+  <title>Careers | Code Cortex</title>
+  <meta name="description" content="Join Code Cortex and build your career in web, mobile, and AI development with a growing tech company." />
+  <meta name="keywords" content="software jobs Pakistan, IT careers, Code Cortex jobs" />
   <meta name="author" content="Code Cortex (Pvt.) Ltd." />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/theme.css" />
+  <!-- STYLES -->
+  <link rel="stylesheet" href="/com/css/theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="assets/code_logo.png" />
+  <link rel="icon" href="/com/assets/code_logo.png" />
 </head>
 
 <body data-theme="dark">
@@ -33,79 +31,58 @@
     <section class="hero">
       <h2>Careers at Code Cortex</h2>
       <p>
-        Build impactful digital products with a passionate team shaping the
-        future of technology.
+        Be part of a passionate team shaping the future of technology.
       </p>
     </section>
 
-    <!-- WHY WORK WITH US -->
+    <!-- WHY JOIN -->
     <section>
-      <h2>Why Work With Us?</h2>
+      <h2>Why Join Us?</h2>
 
       <div class="cards-container">
         <div class="card">
           <i class="fas fa-users"></i>
-          <h3>Collaborative Culture</h3>
-          <p>
-            Work with talented professionals in a supportive, growth-focused
-            environment.
-          </p>
+          <h3>Collaborative Team</h3>
+          <p>Work with skilled professionals in a supportive environment.</p>
         </div>
 
         <div class="card">
-          <i class="fas fa-rocket"></i>
+          <i class="fas fa-chart-line"></i>
           <h3>Career Growth</h3>
-          <p>
-            Learn new technologies, improve your skills, and grow your career
-            with real-world projects.
-          </p>
+          <p>Opportunities to learn, grow, and advance your career.</p>
         </div>
 
         <div class="card">
           <i class="fas fa-laptop-code"></i>
-          <h3>Modern Tech Stack</h3>
-          <p>
-            Hands-on experience with modern web, mobile, cloud, and AI
-            technologies.
-          </p>
+          <h3>Modern Technology</h3>
+          <p>Hands-on experience with modern web, mobile, and AI tools.</p>
         </div>
       </div>
     </section>
 
-    <!-- OPEN POSITIONS -->
+    <!-- OPEN ROLES -->
     <section class="metrics">
       <h2>Open Positions</h2>
 
       <div class="cards-container">
         <div class="card">
           <h3>Frontend Developer</h3>
-          <p>
-            HTML, CSS, JavaScript, React. Experience building responsive user
-            interfaces.
-          </p>
+          <p>HTML, CSS, JavaScript, React experience preferred.</p>
         </div>
 
         <div class="card">
           <h3>Backend Developer</h3>
-          <p>
-            Node.js / Python, APIs, databases, and scalable backend systems.
-          </p>
+          <p>Node.js / Python, APIs, databases, and backend systems.</p>
         </div>
 
         <div class="card">
           <h3>Mobile App Developer</h3>
-          <p>
-            Android / iOS or Flutter developers with real app deployment
-            experience.
-          </p>
+          <p>Android, iOS, or Flutter with published apps.</p>
         </div>
 
         <div class="card">
           <h3>AI / ML Engineer</h3>
-          <p>
-            Machine learning, data analysis, automation, and intelligent
-            systems.
-          </p>
+          <p>Machine learning, data analysis, automation solutions.</p>
         </div>
       </div>
     </section>
@@ -129,7 +106,8 @@
   <div id="site-footer"></div>
 
   <!-- SCRIPTS -->
-  <script src="js/include.js"></script>
+  <script src="/com/js/include.js"></script>
+  <script src="/com/js/main.js"></script>
 
 </body>
 </html>
