--- a/contact.html
+++ b/contact.html
@@ -6,144 +6,101 @@
 
   <!-- SEO -->
   <title>Contact Us | Code Cortex</title>
-  <meta name="description" content="Contact Code Cortex for web development, mobile apps, AI solutions, and ongoing support. Get a free consultation today." />
-  <meta name="keywords" content="contact Code Cortex, software house contact, web development contact, IT services Pakistan" />
+  <meta name="description" content="Contact Code Cortex for web, mobile, and AI solutions. Get a free consultation today." />
+  <meta name="keywords" content="contact Code Cortex, software house contact, IT services Pakistan" />
   <meta name="author" content="Code Cortex (Pvt.) Ltd." />
-  <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Contact Code Cortex" />
-  <meta property="og:description" content="Get in touch with Code Cortex for your next digital project." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/code_logo.png" />
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/theme.css" />
+  <!-- STYLES -->
+  <link rel="stylesheet" href="/com/css/theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="assets/code_logo.png" />
+  <link rel="icon" href="/com/assets/code_logo.png" />
 </head>
 
 <body data-theme="dark">
 
-  <!-- Accessibility -->
+  <!-- Skip link -->
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
-  <!-- Header -->
+  <!-- HEADER -->
   <div id="site-header"></div>
 
-  <!-- Main -->
+  <!-- MAIN CONTENT -->
   <main id="main-content">
 
     <!-- HERO -->
-    <section class="hero small-hero" data-aos="fade-up">
+    <section class="hero">
       <h2>Contact Us</h2>
       <p>
-        Let’s discuss your idea and turn it into a powerful digital solution.
+        Let’s discuss your project and turn your ideas into reality.
       </p>
     </section>
 
     <!-- CONTACT OPTIONS -->
-    <section data-aos="fade-up">
+    <section>
       <h2>Get in Touch</h2>
 
       <div class="cards-container">
 
+        <!-- EMAIL -->
         <div class="card">
           <i class="fas fa-envelope"></i>
           <h3>Email Us</h3>
-          <p>
-            Send us your project requirements and get a personalized response.
-          </p>
+          <p>Send us your project details and we’ll respond quickly.</p>
           <a
-            href="mailto:info@codecortexdigital.com?subject=Project Inquiry - Code Cortex"
-            class="btn btn-primary"
+            href="mailto:info@codecortexdigital.com"
+            class="btn"
           >
-            Send Email
+            info@codecortexdigital.com
           </a>
         </div>
 
+        <!-- WHATSAPP -->
         <div class="card">
           <i class="fab fa-whatsapp"></i>
           <h3>WhatsApp</h3>
-          <p>
-            Chat with us directly for quick questions and instant responses.
-          </p>
+          <p>Chat with us directly for fast communication.</p>
           <a
             href="https://wa.me/923157227688"
             target="_blank"
-            class="btn btn-primary"
+            class="btn"
           >
             Message on WhatsApp
           </a>
         </div>
 
+        <!-- PHONE -->
         <div class="card">
           <i class="fas fa-phone"></i>
           <h3>Call Us</h3>
-          <p>
-            Speak directly with our team for detailed discussions.
-          </p>
-          <a href="tel:+923157227688" class="btn btn-primary">
-            Call Now
+          <p>Speak directly with our team during business hours.</p>
+          <a
+            href="tel:+923157227688"
+            class="btn"
+          >
+            +92 315 722 7688
           </a>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- CONTACT DETAILS -->
-    <section data-aos="fade-up">
-      <h2>Contact Information</h2>
-
-      <div class="cards-container">
-
-        <div class="card">
-          <i class="fas fa-map-marker-alt"></i>
-          <h3>Location</h3>
-          <p>Attock, Punjab, Pakistan</p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-clock"></i>
-          <h3>Working Hours</h3>
-          <p>Monday – Saturday<br />9:00 AM – 6:00 PM</p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-globe"></i>
-          <h3>Serving Globally</h3>
-          <p>USA • UAE • Pakistan</p>
         </div>
 
       </div>
     </section>
 
     <!-- CTA -->
-    <section class="final-cta" data-aos="fade-up">
-      <h2>Ready to Start Your Project?</h2>
-      <p>Get a free consultation with our technical team.</p>
-
-      <a href="mailto:info@codecortexdigital.com" class="btn-large">
-        Get Free Consultation
+    <section class="final-cta">
+      <h2>Need Immediate Assistance?</h2>
+      <p>We’re just a message or call away.</p>
+      <a href="https://wa.me/923157227688" class="btn-large" target="_blank">
+        Contact on WhatsApp
       </a>
-
-      <p class="small-text">
-        Or email us directly at <strong>info@codecortexdigital.com</strong>
-      </p>
     </section>
 
   </main>
 
-  <!-- Footer -->
+  <!-- FOOTER -->
   <div id="site-footer"></div>
 
-  <!-- Scripts -->
-  <script src="js/include.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-  <script src="js/main.js"></script>
+  <!-- SCRIPTS -->
+  <script src="/com/js/include.js"></script>
+  <script src="/com/js/main.js"></script>
 
 </body>
 </html>
