--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta name="google-site-verification" content="-n7sAn-beUll1DWgAGT_40wGsKNpetsTkQfaqlHOZn8" />
   <!-- ================= SEO ================= -->
   <title>Code Cortex | Strategic Development Partner for USA & UAE</title>
   <meta name="description" content="Code Cortex provides elite engineering teams for web, mobile & AI solutions. 40% faster delivery, 60% cost savings." />
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
