--- a/web-development.html
+++ b/web-development.html
@@ -5,22 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Web Development Services | Code Cortex</title>
-  <meta name="description" content="Professional web development services by Code Cortex. Scalable, secure, and high-performance websites and web applications." />
-  <meta name="keywords" content="web development, full stack development, enterprise web apps, SaaS development" />
+  <title>Web Development Services in Pakistan | Code Cortex</title>
+  <meta name="description" content="Professional web development services in Pakistan. We build scalable, secure, high-performance websites & web apps for USA & UAE clients." />
+  <meta name="keywords" content="web development services Pakistan, website development company, custom web applications, offshore web developers" />
   <meta name="author" content="Code Cortex (Pvt.) Ltd." />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Web Development | Code Cortex" />
-  <meta property="og:description" content="Scalable and secure web development solutions for growing businesses." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/code_logo.png" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://codecortexdigital.github.io/com/web-development.html" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
   <!-- Favicon -->
   <link rel="icon" href="assets/code_logo.png" />
@@ -28,134 +24,161 @@
 
 <body data-theme="dark">
 
-  <!-- Accessibility -->
+  <!-- Skip link -->
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
   <!-- Header -->
   <div id="site-header"></div>
 
-  <!-- Main -->
+  <!-- MAIN -->
   <main id="main-content">
 
     <!-- HERO -->
-    <section class="hero small-hero" data-aos="fade-up">
-      <h2>Web Development</h2>
+    <section class="hero">
+      <h1>Web Development Services in Pakistan</h1>
       <p>
-        High-performance, scalable, and secure web solutions designed to power
-        modern businesses.
+        We design and develop modern, scalable, and secure websites that help
+        businesses grow faster in USA, UAE, and global markets.
       </p>
+
+      <div class="hero-cta">
+        <a href="contact.html" class="btn btn-primary">Get Free Consultation</a>
+        <a href="services.html" class="btn btn-secondary">View All Services</a>
+      </div>
     </section>
 
-    <!-- OVERVIEW -->
-    <section data-aos="fade-up">
-      <h2>What We Build</h2>
+    <!-- WHY US -->
+    <section>
+      <h2>Why Choose Code Cortex for Web Development?</h2>
 
       <div class="cards-container">
-
         <div class="card">
-          <i class="fas fa-layer-group"></i>
-          <h3>Custom Web Applications</h3>
+          <i class="fas fa-rocket"></i>
+          <h3>Performance Focused</h3>
           <p>
-            Tailored web apps built to meet unique business needs with modern
-            architectures and clean code.
-          </p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-cloud"></i>
-          <h3>SaaS Platforms</h3>
-          <p>
-            Scalable SaaS solutions with subscription models, dashboards, and
-            secure APIs.
+            Fast-loading websites optimized for Core Web Vitals and SEO.
           </p>
         </div>
 
         <div class="card">
           <i class="fas fa-shield-alt"></i>
-          <h3>Secure Systems</h3>
+          <h3>Secure & Scalable</h3>
           <p>
-            Security-first development with authentication, authorization, and
-            data protection best practices.
-          </p>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- TECHNOLOGIES -->
-    <section data-aos="fade-up">
-      <h2>Technologies We Use</h2>
-
-      <div class="cards-container">
-
-        <div class="card">
-          <i class="fab fa-html5"></i>
-          <h3>Frontend</h3>
-          <p>HTML, CSS, JavaScript, React, Next.js</p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-server"></i>
-          <h3>Backend</h3>
-          <p>Node.js, Django, Laravel, REST APIs</p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-database"></i>
-          <h3>Databases</h3>
-          <p>PostgreSQL, MongoDB, MySQL</p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-cloud-upload-alt"></i>
-          <h3>Cloud</h3>
-          <p>AWS, Azure, Google Cloud</p>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- WHY US -->
-    <section data-aos="fade-up">
-      <h2>Why Our Web Solutions Stand Out</h2>
-
-      <div class="cards-container">
-
-        <div class="card">
-          <i class="fas fa-rocket"></i>
-          <h3>Performance Optimized</h3>
-          <p>
-            Fast load times, optimized assets, and scalable infrastructure.
-          </p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-cogs"></i>
-          <h3>Clean Architecture</h3>
-          <p>
-            Maintainable codebases built with best engineering practices.
+            Enterprise-grade security and scalable architecture for future growth.
           </p>
         </div>
 
         <div class="card">
           <i class="fas fa-users"></i>
-          <h3>Client-Centric</h3>
+          <h3>Client-Centric Approach</h3>
           <p>
-            Transparent communication and agile delivery model.
+            Transparent communication and solutions tailored to your business.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVICES DETAILS -->
+    <section class="metrics">
+      <h2>Our Web Development Expertise</h2>
+
+      <div class="cards-container">
+        <div class="card">
+          <h3>Custom Website Development</h3>
+          <p>
+            Business websites, corporate portals, and landing pages built with
+            modern technologies.
           </p>
         </div>
 
+        <div class="card">
+          <h3>Web Applications</h3>
+          <p>
+            Scalable web apps for startups and enterprises using secure backend
+            systems.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>E-Commerce Solutions</h3>
+          <p>
+            High-conversion online stores with payment gateways and inventory
+            management.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>API & Integrations</h3>
+          <p>
+            Seamless integration with third-party APIs, CRMs, and cloud services.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROCESS -->
+    <section>
+      <h2>Our Web Development Process</h2>
+
+      <div class="cards-container">
+        <div class="card">
+          <h3>1. Discovery & Planning</h3>
+          <p>
+            Understanding your goals, users, and technical requirements.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>2. UI/UX Design</h3>
+          <p>
+            Clean, intuitive interfaces designed for conversions and usability.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>3. Development</h3>
+          <p>
+            Agile development using modern frameworks and best practices.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>4. Testing & Launch</h3>
+          <p>
+            Quality assurance, performance testing, and smooth deployment.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- INDUSTRIES -->
+    <section class="metrics">
+      <h2>Industries We Serve</h2>
+
+      <div class="cards-container">
+        <div class="card"><p>SaaS & Startups</p></div>
+        <div class="card"><p>E-Commerce</p></div>
+        <div class="card"><p>Healthcare</p></div>
+        <div class="card"><p>Education</p></div>
+        <div class="card"><p>Logistics & Real Estate</p></div>
+        <div class="card"><p>Finance & FinTech</p></div>
       </div>
     </section>
 
     <!-- CTA -->
-    <section class="final-cta" data-aos="fade-up">
-      <h2>Need a Scalable Web Solution?</h2>
-      <p>Let’s discuss your requirements and architecture.</p>
+    <section class="final-cta">
+      <h2>Need a Reliable Web Development Partner?</h2>
+      <p>
+        Let’s build a powerful website that drives growth and delivers results.
+      </p>
 
       <a href="contact.html" class="btn-large">
-        Get Started
+        Request Free Consultation
       </a>
+
+      <p class="small-text">
+        Or email us directly at <strong>info@codecortexdigital.com</strong>
+      </p>
     </section>
 
   </main>
@@ -165,7 +188,6 @@
 
   <!-- Scripts -->
   <script src="js/include.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script src="js/main.js"></script>
 
 </body>
